--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-distro==1.2.0
-Flask==1.0.2
-Flask-Caching==1.3.3
-gevent==1.2.2
-netifaces==0.10.6
+distro
+Flask
+Flask-Caching
+gevent
+netifaces
 psutil
-py-cpuinfo==4.0.0
+py-cpuinfo
 PyInstaller
-python-ldap==3.0.0
+python-ldap
