--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,28 +8,20 @@ services:
     container_name: gosamba4-deb
     volumes:
       - ./scripts:/root/
-    ports:
-      - 53:53
-      - 53:53/udp
-      - 88:88
-      - 88:88/udp
-      - 123:123
-      - 135:135
-      - 137-138:137-138/udp
-      - 139:139
-      - 389:389
-      - 389:389/udp
-      - 443:443
-      - 445:445
-      - 464:464
-      - 464:464/udp
-      - 636:636
-      - 1024-1044:1024-1044
-      - 3268-3269:3268-3269
     hostname: deb01
+
+  gosamba4-run:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: gosamba4-deb
+    volumes:
+      - ./scripts:/root/
+    hostname: gosamba4
     cap_add:
       - NET_ADMIN
       - SYS_NICE
       - SYS_RESOURCE
       - SYS_TIME
+      - SYS_PTRACE
     privileged: true
