--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,23 @@ services:
     volumes:
       - ./scripts:/root/
     hostname: gosamba4
+    ports:
+      - 53:53
+      - 53:53/udp
+      - 88:88
+      - 88:88/udp
+      - 123:123
+      - 135:135
+      - 137-138:137-138/udp
+      - 139:139
+      - 389:389
+      - 389:389/udp
+      - 445:445
+      - 464:464
+      - 464:464/udp
+      - 636:636
+      - 1024-1044:1024-1044
+      - 3268-3269:3268-3269
     cap_add:
       - NET_ADMIN
       - SYS_NICE
