--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-distro==1.4.0
-Flask==1.1.1
-Flask-Caching==1.8.0
-gevent==1.5.0
-greenlet==0.4.15
-netifaces==0.10.4
-psutil==5.5.1
-py-cpuinfo==5.0.0
+distro
+Flask
+Flask-Caching
+gevent
+greenlet
+netifaces
+psutil
+py-cpuinfo
 PyInstaller
 python-ldap
