remove more stuff

--- a/scripts/supervisord/supervisord.conf
+++ b/scripts/supervisord/supervisord.conf
@@ -5,9 +5,4 @@ nodaemon=true
 directory=/opt/go-samba4
 autostart=true
 autorestart=true
-command=/opt/go-samba4/go_samba4 --server-prod --ssl
-
-[program:nginx]
-autostart=true
-autorestart=true
-command=/usr/sbin/nginx -g "daemon off;"
+command=/opt/go-samba4/go_samba4 --server-prod
